--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "https-proxy-agent": "^5.0.0",
-    "koishi": "^3.9.2"
+    "koishi": "^3.10.2"
   },
   "dependencies": {
-    "ccxt": "^1.48.47",
-    "koishi-adapter-onebot": "^3.0.8"
+    "ccxt": "^1.49.53",
+    "koishi-adapter-onebot": "^3.0.8",
+    "levelatomic": "file:../levelatomic",
+    "leveldown": "^6.0.0",
+    "levelup": "^5.0.0",
+    "nanoid": "^3.1.22",
+    "node-cron": "^3.0.0"
   }
 }
