--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "levelatomic": "file:../levelatomic",
     "leveldown": "^6.0.0",
     "levelup": "^5.0.0",
-    "nanoid": "^3.1.22"
+    "nanoid": "^3.1.22",
+    "puppeteer": "^9.1.1"
   }
 }
