--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "leveldown": "^6.0.0",
     "levelup": "^5.0.0",
     "nanoid": "^3.1.22",
+    "pngjs": "^6.0.0",
     "puppeteer": "^9.1.1"
   }
 }
