feat: add pm2 ecosystem config and deploy doc

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "BackRunner",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev yarn koishi start",
-    "start": "cross-env NODE_ENV=prod yarn koishi start"
+    "dev": "cross-env NODE_ENV=dev koishi start",
+    "start": "cross-env NODE_ENV=prod koishi start"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
