--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cryptobot",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "View crypto currency price in QQ group",
   "main": "main.js",
   "author": "BackRunner",
@@ -21,6 +21,7 @@
     "levelatomic": "file:../levelatomic",
     "leveldown": "^6.0.0",
     "levelup": "^5.0.0",
+    "moment": "^2.29.1",
     "nanoid": "^3.1.22",
     "pngjs": "^6.0.0",
     "puppeteer": "^9.1.1"
